<resources>
    <string name="app_name">Envite</string>
    <string name="signInButtonText">Sign In</string>
    <string name="signupButtonText">Sign Up</string>
    <string name="splashScreenHeaderText">Envite</string>
    <string name="splashScreenBoldText">Find your place today</string>
    <string name="createAccountBoldText">Create Account</string>
    <string name="loginAccountBoldText">Welcome back</string>
    <string name="createAccountBodyText">Sign up to get started creating Envites</string>
    <string name="loginAccountBodyText">Login to your Envite account</string>
    <string name="name">Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="termsAndConditions">By continuing, you agree to our Terms of Service and Privacy Policy</string>
    <string name="createAccountText">Create Account</string>
    <string name="loginAccountText">Login</string>
    <string name="haveAnAccountText">Have an account</string>
    <string name="dontHaveAnAccountText">Don\'t have an account?</string>
    <string name="haveAnAccountLogInText">Log In</string>
    <string name="dontHaveAnAccountLogInText">Create one</string>
    <string name="homeBoldText">Explore</string>
    <string name="homeCloseToYou">Close to you</string>
    <string name="homeRecentlyAdded">Recently added</string>
    <string name="enviteCardTitleText">2 Bedroom Flat with A simple design and</string>
    <string name="enviteCardBodyText">A very beautiful two bedroom flat with custom amenities and...</string>
    <string name="createEnviteBoldText">Create Envite</string>
    <string name="createEnviteBodyText">Please fill out the form below to create an envite.</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="chooseImage">Choose Image</string>
    <string name="notes">Notes</string>
    <string name="price">Price</string>
    <string name="notesPlaceholder">Hi, I would prefer....</string>
    <string name="createEnvite">Create Envite</string>
    <string name="sampleTitle">2 Bedroom Flat with A simple design and a little corner road beside it</string>
    <string name="underlinedSampleTitle"><u>2 Bedroom Flat with A simple design and a little corner road beside it</u></string>
    <string name="underlinedSampleName"><u>Jillian Jacob</u></string>

    <string name="sampleLocation">7 Laura Street, Middlesbrough Thailand Avenue</string>
    <string name="samplePrice">£400</string>
    <string name="sampleNotes">2 Bedroom Flat with A simple design and a little corner road beside it, 2 Bedroom Flat with A simple design and a little corner road beside it</string>
    <string name="postedBy">Posted By</string>
    <string name="sampleName">Jilian Jacob</string>
    <string name="sampleFirstName">Jilian</string>
    <string name="sampleLastName">Jacob</string>
    <string name="sampleEmail">jillian@mailinator.com</string>
    <string name="sampleAccepted">Accepted</string>
    <string name="sampleTimestamp">Posted on Sun 2/10/2022 at 10:30pm</string>
    <string name="sampleQuestion1">Why are you in search of a new apartment?</string>
    <string name="sampleQuestion2">How long in months did you stay at your last apartment?</string>
    <!--ERRORS-->
    <string name="firstNameRequired">Please enter your first name</string>
    <string name="lastNameRequired">Please enter your last name</string>
    <string name="emailRequired">Please enter your email address</string>
    <string name="emailInvalid">Please enter a valid email</string>
    <string name="passwordRequired">Your password should contain at least one uppercase letter, one symbol and one number</string>
    <string name="questionRequired">Please enter an answer to the question</string>
    <string name="titleRequired">Please enter a title for the envite</string>
    <string name="locationRequired">Please enter a location for the envite</string>
    <string name="noteRequired">Please enter a note for the envite</string>
    <string name="priceRequired">Please enter a price for the envite</string>




    <!--SHARED PREFERENCES-->
    <string name="enviteUserSharedPreferencesFile">enviteUserSharedPreferencesFile</string>
    <string name="sharedPrefUid">uid</string>
    <string name="sharedPrefFirstName">firstName</string>
    <string name="sharedPrefLastName">lastName</string>
    <string name="sharedPrefEmail">email</string>
    <string name="sharedPrefToken">token</string>
    <string name="sharedPrefProfileUrl">profileUrl</string>
    <string name="sharedPrefCreatedAt">createdAt</string>
    <string name="sharedPrefQ1">q1</string>
    <string name="sharedPrefQ2">q2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>