<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:onClick="onClickLogIn"
    tools:context=".activities.CreateAccountActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createAccountToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_arrow"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/createAccountBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/createAccountBoldText"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountToolbar" />

    <TextView
        android:id="@+id/createAccountBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/createAccountBodyText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountBoldText" />

    <LinearLayout
        android:id="@+id/editNameContainer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_style_input"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountBodyText">

        <TextView
            android:id="@+id/editNameLabel"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/name"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editNameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="John Micheal"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editEmailContainer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_style_input"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameContainer">

        <TextView
            android:id="@+id/editEmailLabel"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editEmailText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="johnmicheal@mailinator.com"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editPasswordContainer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_style_input"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailContainer">

        <TextView
            android:id="@+id/editPasswordLabel"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editPasswordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="***********"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="8dp"
        android:text="@string/haveAnAccountText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/haveAnAccountLogInText"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/light_white"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_style"
        android:text="@string/createAccountText"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/inter"
        android:text="@string/termsAndConditions"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>