<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activities.SplashScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:contentDescription="image of city"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/splashTitleTextView"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="190dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/splashScreenHeaderText"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/splashBoldTitleTextView"
        android:layout_width="293dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/splashScreenBoldText"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashTitleTextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="375dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashBoldTitleTextView">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_style"
            android:radius="15dp"
            android:text="@string/signInButtonText"
            android:textColor="@color/black"
            app:backgroundTint="@color/light_orange" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_style"
            android:onClick="onClickSignUp"
            android:text="@string/signupButtonText"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>